--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "confetti-js": "0.0.18",
     "firebase": "^9.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
